3.3.2 ()
Fixed bug: Custom feed linking to post on user site rather than original source

3.3.1 (2013-08-09)
Fixed bug: Roles and Capabilities file had not been included
Fixed bug: Error on install, function not found

3.3 (2013-08-08)
New feature: OPML importer
New feature: Feed item limits for individual Feed Sources
New feature: Custom feed URL
New feature: Feed limit on custom feed
New feature: New 'Fetch feed items' action for each Feed Source in listing display
New feature: Option to enable link to source
Enhanced: Date strings now change according to locale being used (i.e. compatible with WPML)
Enhanced: Capabilities implemented
Enhanced: Feed Sources row action 'View' removed
Fixed Bug: Proxy feed URLs resulting in the permalink: example.com/url

3.2 (2013-07-06)
New feature: Parameter to limit number of feeds displayed
New feature: Paramter to limit feeds displayed to particular sources (via ID)
New feature: Now handles licensing for add-ons
Enhanced: Better feed import handling to handle large number of feed sources

3.1.1 (2013-06-06)
Fixed bug: Incompatibility with some other plugins due to function missing namespace

3.1 (2013-06-06)
New feature: Option to set the number of feed items imported from every feed (default 5)
New feature: Import and Export aggregator settings and feed sources
New feature: Debugging page allowing manual feed refresh and feed reset
Enhanced: Faster handling of restoring sources from trash when feed limit is 0
Fixed bug: Limiter on number of overall feeds stored not working
Fixed bug: Incompatibility issue with Foobox plugin fixed 
Fixed bug: Duplicate feeds sometimes imported

3.0 (2013-03-16)
New feature: Option to select cron frequency
New feature: Code extensibility added to be compatible with add-ons
New feature: Option to set a limit to the number of feeds stored (previously 50, hard coded)
New feature: Option to define the format of the date shown below each feed item