@@ -1,4 +1,5 @@
 3.3.2 ()
+Enhanced: Added metabox links to documentation and add-ons
 Fixed bug: Custom feed linking to post on user site rather than original source
 
 3.3.1 (2013-08-09)
